@@ -1,3 +1,9 @@
+globus-common (15.19-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Wed, 23 Apr 2014 13:01:02 -0400
+
 globus-common (15.18-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
